--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -213,7 +213,6 @@
 			>.ast-menu-toggle {
 				display: inline-block;
 				position: absolute;
-				font-size: inherit;
 				top: 0px;
 				right: 20px;
 				cursor: pointer;
